Limit to PY2, no PY3 wx package available

--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ export PYBUILD_NAME = props
 
 # one ring to rule them all ...
 %:
-	dh $@ --with python2,python3 --buildsystem=pybuild
+	dh $@ --with python2 --buildsystem=pybuild
 
 clean::
 	dh_clean
