--- a/debian/control
+++ b/debian/control
@@ -6,28 +6,17 @@ Priority: optional
 Build-Depends: debhelper (>= 9),
                dh-python,
                python-all,
-               python3-all,
                python-setuptools,
-               python3-setuptools,
 Standards-Version: 3.9.8
 X-Python-Version: >= 2.7
 
 Package: python-props
 Architecture: all
 Section: python
-Depends: ${misc:Depends},
+Depends: python-wxgtk3.0,
+         ${misc:Depends},
          ${python:Depends},
 Provides: ${python:Provides}
 Description: Python descriptor framework
  .
  This package provides the Python 2 module.
-
-Package: python3-props
-Architecture: all
-Section: python
-Depends: ${misc:Depends},
-         ${python3:Depends},
-Provides: ${python3:Provides}
-Description: Python descriptor framework
- .
- This package provides the Python 3 module.
