--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: fsleyes-props
 Maintainer: NeuroDebian Team <team@neuro.debian.net>
-Uploaders: Michael Hanke <mih@debian.org>
+Uploaders: Michael Hanke <mih@debian.org>, Yaroslav Halchenko <debian@onerussian.com>
 Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9),
@@ -11,6 +11,8 @@ Build-Depends: debhelper (>= 9),
                python-six (>= 1.0~),
 Standards-Version: 3.9.8
 X-Python-Version: >= 2.7
+Vcs-Git: https://github.com/neurodebian/fsleyes-props
+Vcs-Browser: https://github.com/neurodebian/fsleyes-props
 
 Package: python-fsleyes-props
 Architecture: all
